kubeflow-azimuth/kubeflow-azimuth-chart/templates/istio-ingressgateway-560.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    managed-by: kubeflow-azimuth-app
  name: istio-ingressgateway
  namespace: istio-system
spec:
  action: ALLOW
  rules:
  - {}
  selector:
    matchLabels:
      app: istio-ingressgateway
      istio: ingressgateway
      managed-by: kubeflow-azimuth-app
